--- a/.github/workflows/speech_text.yml
+++ b/.github/workflows/speech_text.yml
@@ -29,4 +29,4 @@ jobs:
           pip install -r requirements.txt
       - name: speech to text
         run: |
-          speech_text
+          python -m podcast2notion.speech_text
